<?xml version="1.0" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>com.github.jnr</groupId>
  <artifactId>jnr-posix</artifactId>
  <packaging>jar</packaging>
  <version>3.0.12</version>
  <name>jnr-posix</name>
  <description>
    Common cross-project/cross-platform POSIX APIs
  </description>

  <issueManagement>
    <system>JIRA</system>
    <url>http://jira.codehaus.org/browse/JRUBY</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:jnr/jnr-posix.git</connection>
    <developerConnection>scm:git:git@github.com:jnr/jnr-posix.git</developerConnection>
    <url>git@github.com:jnr/jnr-posix.git</url>
  </scm>

  <licenses>
    <license>
      <name>Common Public License - v 1.0</name>
      <url>http://www-128.ibm.com/developerworks/library/os-cpl.html</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>GNU General Public License Version 2</name>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>GNU Lesser General Public License Version 2.1</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>enebo</id>
      <name>Thomas E Enebo</name>
      <email>tom.enebo@gmail.com</email>
    </developer>
    <developer>
      <id>wmeissner</id>
      <name>Wayne Meissner</name>
      <email>wmeissner@gmail.com</email>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.5</maven.compiler.source>
    <maven.compiler.target>1.5</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jnr-ffi</artifactId>
      <version>2.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jnr-constants</artifactId>
      <version>0.8.7</version>
    </dependency>
  </dependencies>

  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav-jackrabbit</artifactId>
        <version>1.0-beta-7</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <archive>
            <manifestFile>MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <forkCount>2</forkCount>
          <reuseForks>false</reuseForks>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
